--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,9 @@
 [build]
-  publish = "/"
-  command = ""
+  functions = "netlify/functions"
 
-[functions]
-  node_bundler = "esbuild"
-
-# Schedule: run fetch_jobs every 6 hours (UTC)
-[[scheduled.functions]]
-  name = "fetch_jobs"   # must match netlify/functions/fetch_jobs.js
-  cron = "0 */6 * * *"
-
+# (optional) allow your static site to call the function from any origin
 [[headers]]
-  for = "/*"
+  for = "/.netlify/functions/*"
   [headers.values]
-  Cache-Control = "public, max-age=300"
+    Access-Control-Allow-Origin = "*"
 
